[gd_scene load_steps=9 format=2]

[ext_resource path="res://scr/in_game_ui.gd" type="Script" id=1]
[ext_resource path="res://fonts/basic_font.tres" type="DynamicFont" id=2]
[ext_resource path="res://gfx/life_bar/HpBarUnder.png" type="Texture" id=3]
[ext_resource path="res://gfx/life_bar/HpBarProgress.png" type="Texture" id=4]
[ext_resource path="res://gfx/life_bar/HpBarOver.png" type="Texture" id=5]
[ext_resource path="res://scenes/mission_container.tscn" type="PackedScene" id=6]
[ext_resource path="res://fonts/m5x7.ttf" type="DynamicFontData" id=7]

[sub_resource type="DynamicFont" id=1]
size = 38
font_data = ExtResource( 7 )

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource( 1 )
mission_scene = ExtResource( 6 )

[node name="right_container" type="VBoxContainer" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -292.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = 40.0
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="health_container" type="VBoxContainer" parent="right_container"]
margin_right = 272.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="right_container/health_container"]
margin_right = 272.0
margin_bottom = 40.0

[node name="health_label" type="Label" parent="right_container/health_container/HBoxContainer"]
margin_top = 7.0
margin_right = 68.0
margin_bottom = 33.0
custom_fonts/font = ExtResource( 2 )
text = "Health:"

[node name="health_bar" type="TextureProgress" parent="right_container/health_container/HBoxContainer"]
margin_left = 72.0
margin_right = 272.0
margin_bottom = 40.0
texture_under = ExtResource( 3 )
texture_over = ExtResource( 5 )
texture_progress = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="missions_container" type="VBoxContainer" parent="right_container"]
margin_top = 60.0
margin_right = 272.0
margin_bottom = 91.0
custom_constants/separation = 10
alignment = 1

[node name="missions_text" type="Label" parent="right_container/missions_container"]
margin_right = 272.0
margin_bottom = 31.0
custom_fonts/font = SubResource( 1 )
text = "Curent Mission"
align = 1
valign = 1

[node name="resourse_container" type="VBoxContainer" parent="."]
margin_left = 20.0
margin_top = 20.0
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="resourse_container"]
margin_right = 100.0
margin_bottom = 26.0

[node name="gold_label" type="Label" parent="resourse_container/HBoxContainer"]
margin_right = 46.0
margin_bottom = 26.0
custom_fonts/font = ExtResource( 2 )
text = "Gold:"

[node name="gold_amound" type="Label" parent="resourse_container/HBoxContainer"]
margin_left = 50.0
margin_right = 62.0
margin_bottom = 26.0
custom_fonts/font = ExtResource( 2 )
text = "0"

[node name="HBoxContainer2" type="HBoxContainer" parent="resourse_container"]
margin_top = 30.0
margin_right = 100.0
margin_bottom = 56.0

[node name="wood_label" type="Label" parent="resourse_container/HBoxContainer2"]
margin_right = 56.0
margin_bottom = 26.0
custom_fonts/font = ExtResource( 2 )
text = "Wood:"

[node name="wood_amound" type="Label" parent="resourse_container/HBoxContainer2"]
margin_left = 60.0
margin_right = 72.0
margin_bottom = 26.0
custom_fonts/font = ExtResource( 2 )
text = "0"

[node name="HBoxContainer3" type="HBoxContainer" parent="resourse_container"]
margin_top = 60.0
margin_right = 100.0
margin_bottom = 86.0

[node name="rock_label" type="Label" parent="resourse_container/HBoxContainer3"]
margin_right = 48.0
margin_bottom = 26.0
custom_fonts/font = ExtResource( 2 )
text = "Rock:"

[node name="rock_amound" type="Label" parent="resourse_container/HBoxContainer3"]
margin_left = 52.0
margin_right = 64.0
margin_bottom = 26.0
custom_fonts/font = ExtResource( 2 )
text = "0"

[node name="HBoxContainer4" type="HBoxContainer" parent="resourse_container"]
margin_top = 90.0
margin_right = 100.0
margin_bottom = 116.0

[node name="leather_label" type="Label" parent="resourse_container/HBoxContainer4"]
margin_right = 84.0
margin_bottom = 26.0
custom_fonts/font = ExtResource( 2 )
text = "Leather:"

[node name="leather_amound" type="Label" parent="resourse_container/HBoxContainer4"]
margin_left = 88.0
margin_right = 100.0
margin_bottom = 26.0
custom_fonts/font = ExtResource( 2 )
text = "0"
